# emurgo-news-api-test

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gnews.json  newsapi.json  start.sh
src/: main.rs
src/config/: database.rs  email.rs
src/controllers/: mod.rs  news.rs
src/grapqhl/: root.rs
