[package]
name = "actix-scaffolding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-session = {version = "0.9.0", features = ["cookie-session"]}
actix-web = "4.4.1"
actix-web-actors = "4.3.0"
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
cached = {version = "0.51.3", features = ["async"]}
chrono = "0.4.33"
diesel = {version = "2.1.4", features = ["postgres","r2d2","chrono","numeric"]}
dotenv = "0.15.0"
http = "1.1.0"
jsonwebtoken = "9.2.0"
lettre = "0.11.7"
magic-crypt = "3.1.13"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
rand = "0.8.5"
redis = {version = "0.25.3", features = ["connection-manager","tokio-comp","r2d2"]}
redis-async = "0.17.1"
reqwest = "0.12.4"
sailfish = { version = "0.8.3", features = ["derive"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.117"
uuid = {version = "1.7.0", features = ["serde"]}
